--- a/package.json
+++ b/package.json
@@ -25,5 +25,6 @@
     "grunt-usemin": "~0.1.12",
     "jshint-stylish": "~0.1.3",
     "load-grunt-tasks": "~0.2.0"
-  }
+  },
+  "private": true
 }
