--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,7 @@
 {
-  "name": "tailored",
-  "version": "0.0.0",
+  "name": "baudoin-jekyll",
+  "version": "1.0",
   "dependencies": {
-    "jquery": "~2.1.0",
-    "modernizr": "~2.7.1"
+  	"jquery": "latest"
   }
 }
